--- a/.github/workflows/uu-status.yml
+++ b/.github/workflows/uu-status.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # sikrer at vi kan parse HTML
+          # for HTML-parsing i enrich-steget
           pip install beautifulsoup4 requests
 
       - name: Build UU-status CSV + details
@@ -55,7 +55,40 @@ jobs:
           [ -f docs/data/uustatus/latest.json ] || echo '{ "urls": [] }' > docs/data/uustatus/latest.json
           [ -f docs/data/uustatus/logs/changes.jsonl ] || : > docs/data/uustatus/logs/changes.jsonl
 
+      # --- lett sanity: hvor mange har faktisk koder etter enrich?
+      - name: Sanity summary (codes present in details)
+        run: |
+          python - <<'PY'
+          import json
+          from pathlib import Path
+          data = json.loads(Path("docs/uu-status-details.json").read_text(encoding="utf-8"))
+          rows = data.get("urls") if isinstance(data, dict) else data
+          with_codes = sum(1 for r in rows if r.get("nonConformities"))
+          print(f"details.json entries: {len(rows)} | with codes: {with_codes}")
+          PY
+
+      # --- lett inspeksjon av baseline i HEAD (nyttig ved feilsøking)
+      - name: Inspect HEAD baseline (light)
+        run: |
+          echo "Branch: $(git rev-parse --abbrev-ref HEAD)"
+          echo "HEAD  : $(git rev-parse HEAD)"
+          git ls-tree -r --name-only HEAD | grep '^docs/data/uustatus/latest.json$' || echo "NOT FOUND in HEAD"
+          echo "baseline url count (HEAD):"
+          git show HEAD:docs/data/uustatus/latest.json 2>/dev/null | python - <<'PY'
+          import sys, json
+          try:
+              j=json.load(sys.stdin)
+              urls=j["urls"] if isinstance(j,dict) else j
+              print(len(urls))
+          except Exception as e:
+              print("0 (could not read baseline)")
+          PY
+
       - name: Build archive (diff & event snapshots)
+        env:
+          # robust: prøv HEAD, HEAD~1, ... for å finne en baseline med endringer
+          AUTO_BACKTRACK: "1"
+          MAX_BACKTRACK: "20"
         run: |
           python build_uu_archive.py
 
