--- a/.github/workflows/build-guides.yml
+++ b/.github/workflows/build-guides.yml
@@ -1,1 +1,45 @@
-test
+name: Build DS guide
+on:
+  push:
+    paths:
+      - 'knowledge/**'
+      - 'scripts/python/**'
+      - '.github/workflows/build-guides.yml'
+  workflow_dispatch:
+
+jobs:
+  build-guide:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with: { python-version: '3.11' }
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install beautifulsoup4 lxml requests
+
+      - name: Crawl DS
+        run: |
+          python scripts/python/crawl_ds.py --sources knowledge/sources.json --out docs/find/crawl.json
+
+      - name: Build index
+        run: |
+          python scripts/python/build_index.py --knowledge knowledge --crawl docs/find/crawl.json --out docs/find/index.json
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ds-guide
+          path: docs/find/
+
+      - name: Commit docs (if changed)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add docs/find/index.json docs/find/crawl.json || true
+          git commit -m "Update DS guide index" || echo "No changes"
+          git push || true
