--- a/.github/workflows/build-guides.yml
+++ b/.github/workflows/build-guides.yml
@@ -2,6 +2,7 @@ permissions:
   contents: write
   
 name: Build DS guide
+
 on:
   push:
     paths:
@@ -18,7 +19,8 @@ jobs:
 
       - name: Setup Python
         uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
+        with:
+          python-version: '3.11'
 
       - name: Install deps
         run: |
@@ -35,6 +37,19 @@ jobs:
         run: |
           python scripts/python/build_index.py --knowledge knowledge --crawl docs/find/crawl.json --out docs/find/index.json
 
+      - name: Debug files
+        run: |
+          echo "== ls docs/find =="
+          ls -lah docs/find
+          echo "== head crawl.json =="
+          head -n 20 docs/find/crawl.json || true
+          echo "== head index.json =="
+          head -n 40 docs/find/index.json || true
+          echo "== git status =="
+          git status
+          echo "== check-ignore =="
+          git check-ignore -v docs/find/crawl.json || true
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -45,6 +60,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add docs/find/index.json docs/find/crawl.json || true
+          # force-add i tilfelle .gitignore matcher
+          git add -f docs/find/index.json docs/find/crawl.json
           git commit -m "Update DS guide index" || echo "No changes"
-          git push || true
+          git push
